<resources>
    <string name="app_name">Pogonu</string>
    <string name="welcome">Welcome</string>
    <string name="quiz_app">Погоны!</string>
    <string name="name_label">Введите ваше имя.</string>
    <string name="name_hint">Имя</string>
    <string name="start">Начать</string>
    <string name="progress_Text">%1d / %2d</string>
    <string name="score">Your Score is %1d out of %2d.</string>
    <string name="submit">Проверить</string>

</resources>